# reqsh

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  cliff.toml  install.sh
.github/: CODEOWNERS
.github/workflows/: release.yml  rust.yml
docs/: commands.md  install.md  introduction.md  roadmap.md  usage.md  variables.md
src/: builtin.rs  context.rs  display.rs  executor.rs  help.rs  helper.rs  http.rs  lexer.rs  lib.rs  logger.rs  main.rs  parser.rs  request.rs  runner.rs  state.rs
