[package]
name = "reqsh"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Harshil Gupta"]
description = "Interactive HTTP shell for API workflows"
repository = "https://github.com/hars-21/reqsh"
readme = "README.md"
keywords = ["http", "repl", "cli", "api", "terminal"]

[dependencies]
colored = "3.1.1"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["blocking", "query"] }
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
